Archive2/0c/743e093100b060/output
main.cpp: In function ‘int main()’:
main.cpp:13:51: error: conversion from ‘gen_seq<seq<ix<0, 0>, ix<0, 1>, ix<0, 2>, ix<1, 0>, ix<1, 1> >, 2, 0>::type {aka seq<ix<0, 0>, ix<0, 1>, ix<0, 2>, ix<1, 0>, ix<1, 1> >}’ to non-scalar type ‘main()::<anonymous struct>’ requested
     struct {}_ = gen_seq<seq<>, 0, 0, 3, 2>::type();
                                                   ^
